# snitch-stitch

./: .env.example  .gitignore  .pddrc  Dockerfile  README.md  architecture.json  architecture_diagram.html  pdd_cost.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.pdd/core_dumps/: pdd-core-20260131T224302Z.json
prompts/module_cursor/: fixesprompt.md  initialprompt.md
snitch_stitch/: __init__.py  backend_scanner.py  cli.py  diff_display.py  fixer.py  frontend_scanner.py  ingest.py  ranker.py
