[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snitch-stitch"
version = "0.1.0"
description = "A security auditor CLI for Git repositories that scans code and running frontends for vulnerabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["security", "vulnerability", "scanner", "git", "cli"]
dependencies = [
    "click",
    "openai",
    "requests",
    "gitingest",
    "eval_type_backport; python_version < '3.10'",
]

[project.scripts]
snitch-stitch = "snitch_stitch.cli:main"

[project.urls]
Homepage = "https://github.com/snitch-stitch/snitch-stitch"
Repository = "https://github.com/snitch-stitch/snitch-stitch"

[tool.setuptools.packages.find]
where = ["."]
include = ["snitch_stitch*"]
